<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mooviku</string>
    <string name="content_description_movie_image">Movie image</string>
    <string name="placeholder_movie_name">Movie Name</string>
    <string name="label_popular">Popular</string>
    <string name="label_home">Home</string>
    <string name="search">Search</string>
    <string name="label_top_rated">Top Rated</string>
    <string name="save">Save</string>
    <string name="description_movie_poster">Movie poster</string>
    <string name="placeholder_review">8.0</string>
    <string name="description_release_date">Release date</string>
    <string name="placeholder_date_dd_mmm_yyyy">20 December 2017</string>
    <string name="genre">Genre</string>
    <string name="placeholder_description">In the heart of the jungle lies a mysterious board game, Jumanji, which has the power to transport its players into a wild and dangerous world. When four... see more</string>
    <string name="details">Details</string>
    <string name="languages">Languages</string>
    <string name="placeholder_language">English</string>
    <string name="label_country_of_origin">Country of Origin</string>
    <string name="placeholder_country_of_origin">United States</string>
    <string name="reviews">Reviews</string>
    <string name="description_profile_avatar">Profile avatar</string>
    <string name="placeholder_profile_name">Profile Name</string>
    <string name="label_more_like_this">More Like This</string>
    <string name="search_hint">Enter a movie name</string>
    <string name="title_favorite">Favorite</string>
    <string name="default_error_message" tools:override="true">Something went wrong</string>
    <string name="label_discover">Discover</string>
    <string name="label_bookmarks">Bookmarks</string>
    <string name="deskripsi_shared_items">Deskripsi Shared Items</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="label_genres">Genres</string>
    <string name="label_latest">Latest</string>
</resources>