<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_review_avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dr_circle"
        android:contentDescription="@string/description_profile_avatar"
        android:src="@tools:sample/avatars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:clipToOutline="true" />

    <TextView
        android:id="@+id/tv_review_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/placeholder_profile_name"
        app:layout_constraintEnd_toStartOf="@id/tv_review_review"
        app:layout_constraintStart_toEndOf="@+id/img_review_avatar"
        app:layout_constraintTop_toTopOf="@id/img_review_avatar" />

    <TextView
        android:id="@+id/tv_review_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/placeholder_review"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_review_name" />

    <TextView
        android:id="@+id/tv_review_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/placeholder_date_dd_mmm_yyyy"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/tv_review_name"
        app:layout_constraintStart_toStartOf="@id/tv_review_name"
        app:layout_constraintTop_toBottomOf="@id/tv_review_name" />

    <TextView
        android:id="@+id/tv_review_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_review_date"
        app:layout_constraintEnd_toEndOf="@id/tv_review_review"
        app:layout_constraintTop_toBottomOf="@id/tv_review_date"
        android:text="@string/placeholder_description"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="8dp"
        android:maxLines="3"
        android:ellipsize="end"/>

</androidx.constraintlayout.widget.ConstraintLayout>